test/langtools/tools/javac/lambda/BadSwitchExpressionLambda.out
BadSwitchExpressionLambda.java:18:26: compiler.err.prob.found.req: (compiler.misc.incompatible.ret.type.in.lambda: (compiler.misc.switch.expression.target.cant.be.void))
- compiler.note.preview.filename: BadSwitchExpressionLambda.java
- compiler.note.preview.recompile
1 error
